Fixed horizontal scrollbar bug when opening panels

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,6 +8,7 @@ body {
   background: linear-gradient( rgba(49, 77, 146, 0.4), rgba(49, 77, 146, 0.4)),
               url(https://images.unsplash.com/photo-1470549813517-2fa741d25c92?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8d1aec0b445e44cfbca1e0741f008709&auto=format&fit=crop&w=1350&q=80);
   margin-top: 150px;
+  overflow-y: scroll;
   text-align: center;
 }
 
